--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </tr>
 </table>
 
-<h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
+Make changes on line 50
 
 <script>
   // Initialization
